modifications 6.2 spring